--- a/src/render/index.html
+++ b/src/render/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- main 分支中并没用到这个补丁 -->
+  <script>var exports = module.exports;</script>
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
